# assignment/project/docs/swagger/swagger.yaml
@@ -1,5 +1,12 @@
 basePath: /
 definitions:
+  contract.BloggerFollowStatusResponse:
+    properties:
+      is_following:
+        type: boolean
+      user_id:
+        type: integer
+    type: object
   contract.CreateTagRequest:
     properties:
       name:
@@ -13,6 +20,13 @@ definitions:
         type: string
       status:
         type: string
+    type: object
+  contract.ListBloggerResponse:
+    properties:
+      bloggers:
+        items:
+          $ref: '#/definitions/contract.ProfileResponse'
+        type: array
     type: object
   contract.ListPostResponse:
     properties:
@@ -45,6 +59,13 @@ definitions:
       updated_at:
         type: string
       user_id:
+        type: integer
+    type: object
+  contract.PostFavouriteStatusResponse:
+    properties:
+      is_favourite:
+        type: boolean
+      post_id:
         type: integer
     type: object
   contract.ProfileResponse:
@@ -141,6 +162,118 @@ paths:
       summary: Signs In user into the system
       tags:
       - authentication
+  /favorites/bloggers:
+    get:
+      consumes:
+      - application/json
+      description: Blogger can view all the bloggers from their following list
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/contract.ListBloggerResponse'
+        "400":
+          description: Bad Request
+          schema: {}
+      security:
+      - BearerToken: []
+      summary: View all followed bloggers
+      tags:
+      - favourite
+  /favorites/bloggers/:userId:
+    put:
+      consumes:
+      - application/json
+      description: Blogger can add/remove blogger from their following list
+      parameters:
+      - description: User ID to follow/unfollow
+        in: path
+        name: userId
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/contract.BloggerFollowStatusResponse'
+        "400":
+          description: Bad Request
+          schema: {}
+      security:
+      - BearerToken: []
+      summary: Add/remove blogger from following list
+      tags:
+      - favourite
+  /favorites/bloggers/posts:
+    get:
+      consumes:
+      - application/json
+      description: Blogger can view all the posts of the following bloggers
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/contract.ListPostResponse'
+        "400":
+          description: Bad Request
+          schema: {}
+      security:
+      - BearerToken: []
+      summary: View posts from followed bloggers
+      tags:
+      - favourite
+  /favorites/posts:
+    get:
+      consumes:
+      - application/json
+      description: Blogger can view all posts from their favourite list
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/contract.ListPostResponse'
+        "400":
+          description: Bad Request
+          schema: {}
+      security:
+      - BearerToken: []
+      summary: View favourite posts
+      tags:
+      - favourite
+  /favorites/posts/:postId:
+    put:
+      consumes:
+      - application/json
+      description: Blogger can add/remove a post from their favourite list
+      parameters:
+      - description: Post ID to add/remove from favourites
+        in: path
+        name: postId
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/contract.PostFavouriteStatusResponse'
+        "400":
+          description: Bad Request
+          schema: {}
+      security:
+      - BearerToken: []
+      summary: Add/remove post from favourite list
+      tags:
+      - favourite
   /health:
     get:
       consumes:
@@ -197,6 +330,23 @@ paths:
       summary: Get all tags
       tags:
       - tag
+    get:
+      consumes:
+      - application/json
+      description: Readers/Bloggers can view all blog tags
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/contract.ListTagResponse'
+        "400":
+          description: Bad Request
+          schema: {}
+      summary: Get all tags
+      tags:
+      - tag
     post:
       consumes:
       - application/json
@@ -224,6 +374,55 @@ paths:
           schema:
             type: string
       summary: Create a new tag
+      tags:
+      - tag
+  /tags/:tagId:
+    delete:
+      consumes:
+      - application/json
+      description: Blogger can delete a tag that does not contain any blog
+      parameters:
+      - description: Tag ID
+        in: path
+        name: tagId
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: No Content
+        "400":
+          description: Bad Request
+          schema: {}
+      security:
+      - BearerToken: []
+      summary: Delete a tag
+      tags:
+      - tag
+  /tags/:tagId/posts:
+    get:
+      consumes:
+      - application/json
+      description: Readers/Bloggers can view all blog posts belong to a particular
+        tag
+      parameters:
+      - description: Tag ID
+        in: path
+        name: tagId
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/contract.ListPostResponse'
+        "400":
+          description: Bad Request
+          schema: {}
+      summary: Get all posts for a tag
       tags:
       - tag
   /tags/:tagId:
