# assignment/project/internal/handler/tag/handler.go
@@ -48,6 +48,15 @@ func (h *handler) RegisterRoutes() server.HandlerRegistry {
 // @Success     200 {object} contract.ListTagResponse
 // @Failure     400 {object} error
 // @Router      /tags [get]
+//
+//	@Summary		Get all tags
+//	@Description	Readers/Bloggers can view all blog tags
+//	@Tags			tag
+//	@Accept			json
+//	@Produce		json
+//	@Success		200	{object}	contract.ListTagResponse
+//	@Failure		400	{object}	error
+//	@Router			/tags [get]
 func (h *handler) List(e echo.Context) error {
 	response, err := h.tagSvc.List()
 
@@ -59,15 +68,16 @@ func (h *handler) List(e echo.Context) error {
 }
 
 // ListPosts handles the request to get all posts for a tag
-// @Summary     Get all posts for a tag
-// @Description  Readers/Bloggers can view all blog posts belong to a particular tag
-// @Tags        tag
-// @Accept      json
-// @Produce     json
-// @Param       tagId  path     int  true  "Tag ID"
-// @Success     200 {object}  contract.ListPostResponse
-// @Failure     400 {object} error
-// @Router      /tags/:tagId/posts [get]
+//
+//	@Summary		Get all posts for a tag
+//	@Description	Readers/Bloggers can view all blog posts belong to a particular tag
+//	@Tags			tag
+//	@Accept			json
+//	@Produce		json
+//	@Param			tagId	path		int	true	"Tag ID"
+//	@Success		200		{object}	contract.ListPostResponse
+//	@Failure		400		{object}	error
+//	@Router			/tags/:tagId/posts [get]
 func (h *handler) ListPosts(e echo.Context) error {
 	return nil
 }
@@ -105,16 +115,17 @@ func (h *handler) Create(c echo.Context) error {
 }
 
 // Delete handles the request to delete a tag
-// @Summary     Delete a tag
-// @Description  Blogger can delete a tag that does not contain any blog
-// @Tags        tag
-// @Accept      json
-// @Produce     json
-// @Security    BearerToken
-// @Param       tagId  path     int  true  "Tag ID"
-// @Success     204 "No Content"
-// @Failure     400 {object} error
-// @Router      /tags/:tagId [delete]
+//
+//	@Summary		Delete a tag
+//	@Description	Blogger can delete a tag that does not contain any blog
+//	@Tags			tag
+//	@Accept			json
+//	@Produce		json
+//	@Security		BearerToken
+//	@Param			tagId	path	int	true	"Tag ID"
+//	@Success		204		"No Content"
+//	@Failure		400		{object}	error
+//	@Router			/tags/:tagId [delete]
 func (h *handler) Delete(e echo.Context) error {
 	return nil
 }
